<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/mn_favourite"
            android:icon="@drawable/ic_star_border_black_24dp"
            app:showAsAction="always"
            android:checked="false"
            android:title=""/>
</menu>