<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/mn_teams"
            android:icon="@drawable/ic_football_badge"
            android:title="@string/teams"/>

    <item
            android:id="@+id/mn_matches"
            android:icon="@drawable/ic_football_field_in_perspective"
            android:title="@string/event"/>

    <item
            android:id="@+id/mn_favourites"
            android:title="@string/favourites"
            android:icon="@drawable/ic_star_black_24dp"/>
</menu>