<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="team_badge" type="id"/>
    <item name="team_name" type="id"/>
    <item name="main_content" type="id"/>
    <item name="btm_nav_view" type="id"/>
    <item name="sp_league" type="id"/>
    <item name="rv_teams" type="id"/>
</resources>